--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,7 @@ body {
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-left: 10px;
 }
 
 * {
