--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ body {
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-left: 10px;
+  padding: 0px 5px 0px 15px;
 }
 
 * {
